--- a/templates/base.html
+++ b/templates/base.html
@@ -1,214 +1,208 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
-		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
-		<link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
-		<link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
-    <title>Hollow Customers System</title>
-		
-</head>
-<body>
-	<nav class="navbar navbar-expand-lg">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="30"> Hollow Customers</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#services">Servicios</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="{% url 'about_us' %}">Sobre nosotros</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="far fa-user"></i>
-						</a>
-						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
-							<li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
+		<head>
+				<meta charset="UTF-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
+				<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+				<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
+				<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
+				<link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
+				<link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
+				<title>Hollow Customers System</title>	
+		</head>
+	<body>
+			<nav class="navbar navbar-expand-lg">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="30"> Hollow Customers</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#services">Servicios</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'about_us' %}">Sobre nosotros</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									<i class="far fa-user"></i>
+								</a>
+								<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+									<li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
+									<li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
+									<li><hr class="dropdown-divider"></li>
+									<li><a class="dropdown-item" href="#"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
+								</ul>
+							</li>
 						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	<div class="container py-4">
-		<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="{% static 'images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_one.jpg">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Gestión y Administración</h5>
-						<p class="lead">Permite poder llevar a cabo un control adecuado de la información del cliente.</p>
 					</div>
 				</div>
-				<div class="carousel-item">
-					<img src="{% static 'images/carousel_two.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Automatiza procesos</h5>
-						<p class="lead">Automatiza tareas evitando cargas repetitivas lo que hace que aumente la productividad del cliente.</p>
+			</nav>
+			<div class="container py-4">
+				<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
+					<div class="carousel-indicators">
+						<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+						<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+						<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
 					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="{% static 'images/carousel_three.jpg' %}" class="d-block w-100" alt="carousel_three.jpg">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Mejora las relaciones con la empresa</h5>
-						<p class="lead">La empresa y sus clientes mantienen una estrecha elación  de las diferentes actividades.</p>
-					</div>
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
-	</div>
-
-	<div class="container py-4" id="services">
-		<div class="row">
-			<div class="col-sm-6 py-3">
-				<div class="card mb-3" style="max-width: 540px;">
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="{% static 'images/customer_service.jpg' %}" class="img-fluid rounded-start" alt="customer_service.jpg">
-						</div>
-						<div class="col-md-8">
-							<div class="card-header lead">
-								Atención al cliente
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="{% static 'images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_one.jpg">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>Gestión y Administración</h5>
+								<p class="lead">Permite poder llevar a cabo un control adecuado de la información del cliente.</p>
 							</div>
-							<div class="card-body">
-								<p class="card-text">Brindamos un sistema de atención al cliente en la que se resolverá las problematicas que tengan los clientes, buscamos satisfacer sus principales necesidades.</p>
+						</div>
+						<div class="carousel-item">
+							<img src="{% static 'images/carousel_two.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>Automatiza procesos</h5>
+								<p class="lead">Automatiza tareas evitando cargas repetitivas lo que hace que aumente la productividad del cliente.</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img src="{% static 'images/carousel_three.jpg' %}" class="d-block w-100" alt="carousel_three.jpg">
+							<div class="carousel-caption d-none d-md-block">
+								<h5>Mejora las relaciones con la empresa</h5>
+								<p class="lead">La empresa y sus clientes mantienen una estrecha elación  de las diferentes actividades.</p>
 							</div>
 						</div>
 					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
 			</div>
-			<div class="col-sm-6 py-3">
-				<div class="card mb-3" style="max-width: 540px;">
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="{% static 'images/products.jpg' %}" class="img-fluid rounded-start" alt="products.jpg">
-						</div>
-						<div class="col-md-8">
-							<div class="card-header lead">
-								Gestión de productos
-							</div>
-							<div class="card-body">
-								<p class="card-text">Los clientes podrán gestionar los productos adquiridos de la empresa por medio de carritos de compras y hacer su respectivo seguimiento a dichos productos.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div><div class="col-sm-6 py-3">
-				<div class="card mb-3" style="max-width: 540px;">
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="{% static 'images/tasks.jpg' %}" class="img-fluid rounded-start" alt="tasks.jpg">
-						</div>
-						<div class="col-md-8">
-							<div class="card-header lead">
-								Asignación de Tasks
-							</div>
-							<div class="card-body">
-								<p class="card-text">Los clientes o la empresa podrán llevar a cabo diferentes asignaciones de tareas en la que se pretende llevar un control de las diferentes actividades.</p>
+			<div class="container py-4" id="services">
+				<div class="row">
+					<div class="col-sm-6 py-3">
+						<div class="card mb-3" style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<img src="{% static 'images/customer_service.jpg' %}" class="img-fluid rounded-start" alt="customer_service.jpg">
+								</div>
+								<div class="col-md-8">
+									<div class="card-header lead">
+										Atención al cliente
+									</div>
+									<div class="card-body">
+										<p class="card-text">Brindamos un sistema de atención al cliente en la que se resolverá las problematicas que tengan los clientes, buscamos satisfacer sus principales necesidades.</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div><div class="col-sm-6 py-3">
-				<div class="card mb-3" style="max-width: 540px;">
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="{% static 'images/inventory_control.jpg' %}" class="img-fluid rounded-start" alt="inventory_control.jpg">
-						</div>
-						<div class="col-md-8">
-							<div class="card-header lead">
-								Control de inventario
+					<div class="col-sm-6 py-3">
+						<div class="card mb-3" style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<img src="{% static 'images/products.jpg' %}" class="img-fluid rounded-start" alt="products.jpg">
+								</div>
+								<div class="col-md-8">
+									<div class="card-header lead">
+										Gestión de productos
+									</div>
+									<div class="card-body">
+										<p class="card-text">Los clientes podrán gestionar los productos adquiridos de la empresa por medio de carritos de compras y hacer su respectivo seguimiento a dichos productos.</p>
+									</div>
+								</div>
 							</div>
-							<div class="card-body">
-								<p class="card-text">El control de inventario permite a la empresa gestionar las existencias que almacena, abarca el registro de todos aquellos movimientos de almacenamiento de materia prima.</p>
+						</div>
+					</div><div class="col-sm-6 py-3">
+						<div class="card mb-3" style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<img src="{% static 'images/tasks.jpg' %}" class="img-fluid rounded-start" alt="tasks.jpg">
+								</div>
+								<div class="col-md-8">
+									<div class="card-header lead">
+										Asignación de Tasks
+									</div>
+									<div class="card-body">
+										<p class="card-text">Los clientes o la empresa podrán llevar a cabo diferentes asignaciones de tareas en la que se pretende llevar un control de las diferentes actividades.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div><div class="col-sm-6 py-3">
+						<div class="card mb-3" style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<img src="{% static 'images/inventory_control.jpg' %}" class="img-fluid rounded-start" alt="inventory_control.jpg">
+								</div>
+								<div class="col-md-8">
+									<div class="card-header lead">
+										Control de inventario
+									</div>
+									<div class="card-body">
+										<p class="card-text">El control de inventario permite a la empresa gestionar las existencias que almacena, abarca el registro de todos aquellos movimientos de almacenamiento de materia prima.</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	
-	
-		<footer class="text-center text-lg-start text-white" style="background-color: #121a33">
-			<div class="container p-4 pb-0">
-				<section class="">
-					<div class="row">
-						<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-							<h6 class="text-uppercase mb-4 font-weight-bold">
-								Hollow Customers System
-							</h6>
-							<p class="text-white" style="text-align: justify;">
-								Hollow Customers System es una aplicación que permite gestionar, administrar y mejorar las relaciones entre la empresa y sus clientes, esta aplicación permite almacenar, organizar y acceder a la información relevante de los clientes.
-							</p>
-						</div>
-						<hr class="w-100 clearfix d-md-none" />
-						<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-							<h6 class="text-uppercase mb-4 font-weight-bold">Productos y Servicios</h6>
-							<p class="text-white">
-								Atención al cliente
-							</p>
-							<p class="text-white">
-								Gestión de productos
-							</p>
-							<p class="text-white">
-								Tasks
-							</p>
-							<p class="text-white">
-								Control de inventario
-							</p>
-						</div>
-						<hr class="w-100 clearfix d-md-none" />
-						<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-							<h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-							<p><i class="fas fa-home mr-3"></i> Barranquilla, Atlántico, CO</p>
-							<p><i class="fas fa-envelope mr-3"></i> andresfsilvera0109@gmail.com</p>
-							<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-							<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-						</div>
-						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-							<h6 class="text-uppercase mb-4 font-weight-bold">Siguenos</h6>
-							<a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#! role="button"><i class="fab fa-linkedin-in"></i></a>
-							<a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i></a>
-						</div>
+				<footer class="text-center text-lg-start text-white" style="background-color: #121a33">
+					<div class="container p-4 pb-0">
+						<section class="">
+							<div class="row">
+								<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+									<h6 class="text-uppercase mb-4 font-weight-bold">
+										Hollow Customers System
+									</h6>
+									<p class="text-white" style="text-align: justify;">
+										Hollow Customers System es una aplicación que permite gestionar, administrar y mejorar las relaciones entre la empresa y sus clientes, esta aplicación permite almacenar, organizar y acceder a la información relevante de los clientes.
+									</p>
+								</div>
+								<hr class="w-100 clearfix d-md-none" />
+								<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+									<h6 class="text-uppercase mb-4 font-weight-bold">Productos y Servicios</h6>
+									<p class="text-white">
+										Atención al cliente
+									</p>
+									<p class="text-white">
+										Gestión de productos
+									</p>
+									<p class="text-white">
+										Tasks
+									</p>
+									<p class="text-white">
+										Control de inventario
+									</p>
+								</div>
+								<hr class="w-100 clearfix d-md-none" />
+								<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+									<h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+									<p><i class="fas fa-home mr-3"></i> Barranquilla, Atlántico, CO</p>
+									<p><i class="fas fa-envelope mr-3"></i> andresfsilvera0109@gmail.com</p>
+									<p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+									<p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+								</div>
+								<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+									<h6 class="text-uppercase mb-4 font-weight-bold">Siguenos</h6>
+									<a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#" role="button"><i class="fab fa-linkedin-in"></i></a>
+									<a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/AndresSilverall" role="button" target="_blank"><i class="fab fa-github"></i></a>
+								</div>
+							</div>
+						</section>
 					</div>
-				</section>
-			</div>
-			<div class="text-center p-3" style="background-color: #5c5470">
-				© 2024 Hollow Clients System, Todos los derechos reservados.
-			</div>
-		</footer>
-  
-	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+					<div class="text-center p-3" style="background-color: #5c5470">
+						© 2024 Hollow Customers System, Todos los derechos reservados.
+					</div>
+				</footer>
+			<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
