--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -5,14 +5,14 @@
 {% block title%}Login{% endblock %}
 
 {% block extra_styles %}
-		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}"></script>
+		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
 {% endblock %}
 
 
 {% block content%}
 
-<div class="h-100 d-flex align-items-center justify-content-center py-5">
+<div class="container h-100 d-flex align-items-center justify-content-center py-5">
 	<form id="login-form">
 		{% csrf_token %}
 		<div class="form-group">
@@ -24,7 +24,7 @@
 							<label for="username"><i class="fas fa-user"></i></label>
 						</span>
 					</div>
-					<input class="form-control" type="text" name="username" id="username" placeholder="Nombre de usuario">
+					<input class="form-control" type="text" name="username" id="username" placeholder="Nombre de usuario" required>
 				</div>
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
@@ -32,16 +32,19 @@
 							<label for="password"><i class="fas fa-lock"></i></label>
 						</span>
 					</div>
-					<input class="form-control" type="password" name="password" id="password" placeholder="Contraseña">
+					<input class="form-control" type="password" name="password" id="password" placeholder="Contraseña" required>
 					<div class="d-grid gap-2"></div>
 					<a class="py-1 text-decoration-none"  href="{% url 'change_password' %}"><small>¿Olvidaste tu Contraseña?</small> </a>
 				</div>
 				<div class="d-grid gap-2">
-					<button class="btn btn-primary" type="submit">Ingresar</button>
+					<button class="btn btn-primary" type="submit"> Ingresar</button>
 					<a class="text-decoration-none"  href="{% url 'register' %}"><small> ¿No eres un miembro? Registrate ya!</small></a>
 				</div>
 			</div>
-			<br>
+			
+		</div>
+	</form>
+	<br>
 				{% if messages %}
 					{% for message in messages %}
 						<div id="success" class="alert alert-danger alert-dismissible fade show" role="alert"">
@@ -50,9 +53,6 @@
 						</div>
 					{% endfor %}
 				{% endif %}
-		</div>
-	</form>
-	<script src="{% static 'js/login_form.js' %}"></script>
 </div>
-
+<script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>
 {% endblock %}
