--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -6,53 +6,57 @@
 
 {% block extra_styles %}
 		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
+		<link rel="stylesheet" href="{% static 'styles/login.css' %}">
+    
 {% endblock %}
 
 
 {% block content%}
+<section class="vh-20 gradient-custom py-5">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-<div class="container h-100 d-flex align-items-center justify-content-center py-5">
-	<form id="login-form" action="{% url 'login' %}" method="POST">
-		{% csrf_token %}
-		<div class="form-group">
-			<h3 class="lead text-center py-4 display-6">Iniciar sesión</h3>
-			<div class="col-md-8 mx-5">
-				<div class="input-group mb-3">
-					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">
-							<label for="username"><i class="fas fa-user"></i></label>
-						</span>
-					</div>
-					<input class="form-control" type="text" name="username" id="username" placeholder="Nombre de usuario" required>
-				</div>
-				<div class="input-group mb-3">
-					<div class="input-group-prepend">
-						<span class="input-group-text" id="basic-addon1">
-							<label for="password"><i class="fas fa-lock"></i></label>
-						</span>
-					</div>
-					<input class="form-control" type="password" name="password" id="password" placeholder="Contraseña" required>
-					<div class="d-grid gap-2"></div>
-					<a class="py-1 text-decoration-none"  href="{% url 'change_password' %}"><small>¿Olvidaste tu Contraseña?</small> </a>
-				</div>
-				<div class="d-grid gap-2">
-					<button class="btn btn-primary" type="submit"> Ingresar</button>
-					<a class="text-decoration-none"  href="{% url 'register' %}"><small> ¿No eres un miembro? Registrate ya!</small></a>
-				</div>
-			</div>
-		</div>
-	</form>
-	<br>
-			{% if messages %}
-					{% for message in messages %}
-						<div id="success" class="alert alert-danger alert-dismissible fade show" role="alert"">
-							{{ message }}
-							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-						</div>
-					{% endfor %}
-			{% endif %}
-</div>
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Iniciar sesion</h2>
+              <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                <label class="form-label" for="typeEmailX">Nombre de usuario</label>
+              </div>
+
+              <div class="form-outline form-white mb-4">
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                <label class="" for="typePasswordX">contraseña</label>
+              </div>
+
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+
+              <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+              </div>
+
+            </div>
+
+            <div>
+              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- <script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>s -->
 {% endblock %}
