--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -11,7 +11,7 @@
 
 
 {% block content%}
-<form action="{% url 'login' %}" method="POST">
+<form id="login-form">
   {% csrf_token %}
   <section class="vh-50 gradient-custom py-5">
     <div class="container py-5 h-100">
@@ -23,15 +23,15 @@
                 <h2 class="fw-bold mb-2 text-uppercase"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></h2>
                 <p class="text-white-50 mb-5 py-2">Por favor, ingresa tu contraseña de ingreso!</p>
                 <div class="form-outline form-white mb-4">
-                  <label class="form-label" for="typeEmailX"><i class="fas fa-user"></i> Nombre de usuario</label>
-                  <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username"  placeholder="Ingresa tu nombre de usuario">
+                  <label class="form-label" for="username"><i class="fas fa-user"></i> Nombre de usuario</label>
+                  <input type="text" id="username" class="form-control form-control-lg" name="username"  placeholder="Ingresa tu nombre de usuario">
                 </div>
                 <div class="form-outline form-white mb-4">
-                  <label class="form-label" for="typePasswordX"><i class="fas fa-lock"></i> Contraseña</label>
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password" placeholder="Ingresa tu contraseña">
+                  <label class="form-label" for="password"><i class="fas fa-lock"></i> Contraseña</label>
+                  <input type="password" id="password" class="form-control form-control-lg" name="password" id="password" placeholder="Ingresa tu contraseña">
                 </div>
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesión</button>
-                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                <div id="message-content" class="d-flex justify-content-center text-center mt-4 pt-1">
                   {% if messages %}
                     {% for message in messages %}
                     <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -53,7 +53,5 @@
     </div>
   </section>
 </form>
-
-
-<!-- <script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>s -->
+<script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>
 {% endblock %}
