--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,13 @@
 					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</a>
+								<a class="nav-link text-decoration-none" aria-current="page" href="{% url 'home' %}">Inicio</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'about' %}">Sobre nosotros</a>
+								<a class="nav-link text-decoration-none" href="{% url 'about' %}">Sobre nosotros</a>
 							</li>
 							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								<a class="nav-link dropdown-toggle text-decoration-none" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									<i class="far fa-user"></i>
 								</a>
 								<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
